# PaceMan

PACman/: CMakeLists.txt  Juego.c  Juego.h  ServidorSocket.c  ServidorSockets.c  ServidorSockets.h  main.c
PACman/ChSocket/: Socket_Cliente.c
PacMan-master/Java/PacMan/src/Sockets/: SocketServidor.java
PacMan-master/Java/PacMan/src/characters/: PacMan.java
PacMan-master/Java/PacMan/src/gui/: GameWindow.java  StartWindow.java  windowJFrame.java
